OOTB to Pre-Trained

--- a/Emotion-Classification/Emotion Classification - Custom Model Training.ipynb
+++ b/Emotion-Classification/Emotion Classification - Custom Model Training.ipynb
@@ -5,7 +5,7 @@
    "id": "3faa04a0",
    "metadata": {},
    "source": [
-    "# Classifying emotions in movie dialogue using Watson NLP"
+    "# Classifying emotions in movie dialogue using Watson NLP - custom models"
    ]
   },
   {
@@ -19,7 +19,7 @@
     "Watson NLP offers so-called blocks for various NLP tasks. This notebook shows:\n",
     "\n",
     "- **Syntax analysis** with the _Syntax block_ for English (`syntax_izumo_en_stock`). This block performs tokenization, lemmatization, parts of speech tagging, and dependency parsing on raw input documents so that custom models can properly classify documents.\n",
-    "- **Emotion classification** with the _Ensemble emotion workflow_ (`ensemble_classification-wf_en_emotion-stock`) and the _Aggregated emotion workflow_ (`aggregated_classification-wf_en_emotion-stock`). These model workflow classify text into five emotions: \"sadness\", \"joy\", \"anger\", \"fear\", \"disgust\".\n",
+    "- **Emotion classification** with the _TF-IDF_, _Embeddings_, and _CNN_ models in Watson NLP. These model workflow classify text into five emotions: \"sadness\", \"happiness\", \"neutral\", \"anger\", \"fear\", \"disgust\".\n",
     "\n",
     "## Table of Contents\n",
     "\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4d248b2",
+   "id": "098cc1b9",
    "metadata": {},
    "source": [
     "## 2. Dataset\n",
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e9abe899",
+   "id": "418107c7",
    "metadata": {},
    "source": [
     "<a id=\"dataImport\"></a>\n",
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2721c4e2",
+   "id": "53c05bf5",
    "metadata": {},
    "source": [
     "<a id=\"dataFormatting\"></a>\n",
@@ -856,7 +856,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88f0b8ed",
+   "id": "b7594aeb",
    "metadata": {},
    "outputs": [],
    "source": []
