--- a/Emotion-Classification/Emotion Classification - Pre-Trained Models.ipynb
+++ b/Emotion-Classification/Emotion Classification - Pre-Trained Models.ipynb
@@ -5,7 +5,7 @@
    "id": "3faa04a0",
    "metadata": {},
    "source": [
-    "# Classifying emotions in movie dialogue using Watson NLP"
+    "# Classifying emotions in movie dialogue using Watson NLP - pre-trained models"
    ]
   },
   {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee6f1cd2",
+   "id": "65644bca",
    "metadata": {},
    "source": [
     "<a id=\"dataImport\"></a>\n",
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "362ac07e",
+   "id": "95dbaf89",
    "metadata": {},
    "source": [
     "<a id=\"dataFormatting\"></a>\n",
