--- a/Emotion-Classification/Emotion Classification - Custom Model Training.ipynb
+++ b/Emotion-Classification/Emotion Classification - Custom Model Training.ipynb
@@ -904,7 +904,7 @@
    "id": "f775fa99",
    "metadata": {},
    "source": [
-    "Please note that this content is made available by IBM Build Lab to foster Embeddable AI technology adoption. The content may include systems & methods pending patent with USPTO and protected under US Patent Laws. For redistribution of this content, IBM will use release process. For any questions please log an issue in the [GitHub](https://github.com/ibm-build-labs/Watson-NLP). \n",
+    "Please note that this content is made available by IBM Build Lab to foster Embedded AI technology adoption. The content may include systems & methods pending patent with USPTO and protected under US Patent Laws. For redistribution of this content, IBM will use release process. For any questions please log an issue in the hosting [GitHub](https://github.com/ibm-build-labs/Watson-NLP) repository. \n",
     "\n",
     "Developed by IBM Build Lab \n",
     "\n",
@@ -914,7 +914,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d5ecc2c3",
+   "id": "dcbc438e",
    "metadata": {},
    "outputs": [],
    "source": []
