Update Emotion Classification - Pre-Trained Models.ipynb

--- a/ML/Emotion-Classification/Emotion Classification - Pre-Trained Models.ipynb
+++ b/ML/Emotion-Classification/Emotion Classification - Pre-Trained Models.ipynb
@@ -33,7 +33,7 @@
     "Watson NLP offers so-called blocks for various NLP tasks. This notebook shows:\n",
     "\n",
     "- **Syntax analysis** with the _Syntax block_ for English (`syntax_izumo_en_stock`). This block performs tokenization, lemmatization, parts of speech tagging, and dependency parsing on raw input documents so that custom models can properly classify documents.\n",
-    "- **Emotion classification** with the _Ensemble emotion workflow_ (`ensemble_classification-wf_en_emotion-stock`) and the _Aggregated emotion workflow_ (`aggregated_classification-wf_en_emotion-stock`). These model workflow classify text into five emotions: \"sadness\", \"joy\", \"anger\", \"fear\", \"disgust\".\n",
+    "- **Emotion classification** with the _Ensemble emotion workflow_ (`emotion_aggregated-workflow_en_stock`). These model workflow classify text into five emotions: \"sadness\", \"joy\", \"anger\", \"fear\", \"disgust\".\n",
     "\n",
     "## Table of Contents\n",
     "\n",
@@ -439,7 +439,7 @@
    "id": "d064dbdc",
    "metadata": {},
    "source": [
-    "<span style=\"color:blueviolet\">The result of the Ensemble model returns a list of dictionaries that indicate each label and its confidence score. The highest confidence score deems the label of prediction.</span>"
+    "<span style=\"color:blueviolet\">The result of the model returns a list of dictionaries that indicate each label and its confidence score. The highest confidence score deems the label of prediction.</span>"
    ]
   },
   {
@@ -528,7 +528,7 @@
    "id": "e9c1ea5e",
    "metadata": {},
    "source": [
-    "<span style=\"color:blueviolet\">The Ensemble model also has the `model.evaluate_quality()` function, which allows the evaluation of an entire test set. The result returns a dictionary of dictionaries that map each label to its confusion matrix, precision and recall, and f1 score.</span>"
+    "<span style=\"color:blueviolet\">The model also has the `model.evaluate_quality()` function, which allows the evaluation of an entire test set. The result returns a dictionary of dictionaries that map each label to its confusion matrix, precision and recall, and f1 score.</span>"
    ]
   },
   {
@@ -625,7 +625,7 @@
    "id": "a016fe32",
    "metadata": {},
    "source": [
-    "Based on the micro precision, recall, and f1 score, this Ensemble model did not perform well on our test data. However hyperparameter tuning of the pre-trained model may improve its performance.\n",
+    "Based on the micro precision, recall, and f1 score, this model did not perform well on our test data. However hyperparameter tuning of the pre-trained model may improve its performance.\n",
     "<br><br>\n",
     "*The micro metrics are taken here instead of the macro metrics because of the class imbalance in the data."
    ]
@@ -930,7 +930,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "931c1208",
+   "id": "6cf9f0f1",
    "metadata": {},
    "outputs": [],
    "source": []
